--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "notyf": "^3.10.0",
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
