--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
