--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "notyf": "^3.10.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
-    "redux": "^4.2.0",
-    "uuid": "^8.3.2",
     "react-media": "^1.10.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.5",
+    "react-toastify": "^7.0.4",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
