--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.2.0",
     "react-media": "^1.10.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
